# samples

./: .gitignore  README.txt
Avalonia-Converters-Issue/: AvaloniaApplication1.sln
Avalonia-Converters-Issue/AvaloniaApplication1/: AvaloniaApplication1.csproj  GuidToStringConverter.cs  Program.cs
Avalonia-Converters-Issue/AvaloniaApplication1/ViewModels/: MainWindowViewModel.cs
Avalonia-Converters-Issue/AvaloniaApplication1/Views/: MainWindow.axaml
Avalonia-ICustomTypeDescriptor/AvaloniaApplication1/: App.axaml  AvaloniaApplication1.csproj  CustomPropertyAccessorPlugin.cs  Program.cs
Avalonia-ICustomTypeDescriptor/AvaloniaApplication1/ViewModels/: Item.cs  MainWindowViewModel.cs
Avalonia-ICustomTypeDescriptor/AvaloniaApplication1/Views/: MainWindow.axaml  (+1 more)
Avalonia-Indexer-Validation-Issue/AvaloniaApplication1/: AvaloniaApplication1.csproj
Avalonia-Issue-5194/AvaloniaApplication1/: AvaloniaApplication1.csproj  Program.cs
Avalonia-TextBox-Experiments/AvaloniaApplication1/: App.axaml  ViewLocator.cs
CLion-Issue-RedSymbols-20260512/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
CLion-Issue-RedSymbols-20260512/cmake/: compiler_definitions.cmake  compiler_options.cmake  compiler_options_clang.cmake  compiler_options_gcc.cmake  compiler_options_msvc.cmake  configure_file_on_build.cmake  functions.cmake  main.cmake
CLion-Issue-RedSymbols-20260512/my_app/: CMakeLists.txt
CLion-Issue-RedSymbols-20260512/my_app/src/: main.cpp
RiderIssue/: RiderIssue.sln
RiderIssue/TestProject1/: TestProject1.csproj  UnitTest1.cs
(+11 files in other folders)
